--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,140 +1,304 @@
 {
-  // Use IntelliSense to learn about possible attributes.
-  // Hover to view descriptions of existing attributes.
-  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-  "version": "0.2.0",
-  "configurations": [
-    {
-      "type": "lldb",
-      "request": "launch",
-      "name": "Debug executable 'day1_part1'",
-      "cargo": {
-        "args": ["build", "--bin=day1_part1", "--package=day1_part1"],
-        "filter": {
-          "name": "day1_part1",
-          "kind": "bin"
+    // Use IntelliSense to learn about possible attributes.
+    // Hover to view descriptions of existing attributes.
+    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+    "version": "0.2.0",
+    "configurations": [
+        {
+            "type": "lldb",
+            "request": "launch",
+            "name": "Debug executable 'day1_part1'",
+            "cargo": {
+                "args": [
+                    "build",
+                    "--bin=day1_part1",
+                    "--package=day1_part1"
+                ],
+                "filter": {
+                    "name": "day1_part1",
+                    "kind": "bin"
+                }
+            },
+            "args": [],
+            "cwd": "${workspaceFolder}"
+        },
+        {
+            "type": "lldb",
+            "request": "launch",
+            "name": "Debug unit tests in executable 'day1_part1'",
+            "cargo": {
+                "args": [
+                    "test",
+                    "--no-run",
+                    "--bin=day1_part1",
+                    "--package=day1_part1"
+                ],
+                "filter": {
+                    "name": "day1_part1",
+                    "kind": "bin"
+                }
+            },
+            "args": [],
+            "cwd": "${workspaceFolder}"
+        },
+        {
+            "type": "lldb",
+            "request": "launch",
+            "name": "Debug executable 'day1_part2'",
+            "cargo": {
+                "args": [
+                    "build",
+                    "--bin=day1_part2",
+                    "--package=day1_part2"
+                ],
+                "filter": {
+                    "name": "day1_part2",
+                    "kind": "bin"
+                }
+            },
+            "args": [],
+            "cwd": "${workspaceFolder}"
+        },
+        {
+            "type": "lldb",
+            "request": "launch",
+            "name": "Debug unit tests in executable 'day1_part2'",
+            "cargo": {
+                "args": [
+                    "test",
+                    "--no-run",
+                    "--bin=day1_part2",
+                    "--package=day1_part2"
+                ],
+                "filter": {
+                    "name": "day1_part2",
+                    "kind": "bin"
+                }
+            },
+            "args": [],
+            "cwd": "${workspaceFolder}"
+        },
+        {
+            "type": "lldb",
+            "request": "launch",
+            "name": "Debug executable 'day2_part1'",
+            "cargo": {
+                "args": [
+                    "build",
+                    "--bin=day2_part1",
+                    "--package=day2_part1"
+                ],
+                "filter": {
+                    "name": "day2_part1",
+                    "kind": "bin"
+                }
+            },
+            "args": [],
+            "cwd": "${workspaceFolder}"
+        },
+        {
+            "type": "lldb",
+            "request": "launch",
+            "name": "Debug unit tests in executable 'day2_part1'",
+            "cargo": {
+                "args": [
+                    "test",
+                    "--no-run",
+                    "--bin=day2_part1",
+                    "--package=day2_part1"
+                ],
+                "filter": {
+                    "name": "day2_part1",
+                    "kind": "bin"
+                }
+            },
+            "args": [],
+            "cwd": "${workspaceFolder}"
+        },
+        {
+            "type": "lldb",
+            "request": "launch",
+            "name": "Debug executable 'day2_part2'",
+            "cargo": {
+                "args": [
+                    "build",
+                    "--bin=day2_part2",
+                    "--package=day2_part2"
+                ],
+                "filter": {
+                    "name": "day2_part2",
+                    "kind": "bin"
+                }
+            },
+            "args": [],
+            "cwd": "${workspaceFolder}"
+        },
+        {
+            "type": "lldb",
+            "request": "launch",
+            "name": "Debug unit tests in executable 'day2_part2'",
+            "cargo": {
+                "args": [
+                    "test",
+                    "--no-run",
+                    "--bin=day2_part2",
+                    "--package=day2_part2"
+                ],
+                "filter": {
+                    "name": "day2_part2",
+                    "kind": "bin"
+                }
+            },
+            "args": [],
+            "cwd": "${workspaceFolder}"
+        },
+        {
+            "type": "lldb",
+            "request": "launch",
+            "name": "Debug executable 'day3_part1'",
+            "cargo": {
+                "args": [
+                    "build",
+                    "--bin=day3_part1",
+                    "--package=day3_part1"
+                ],
+                "filter": {
+                    "name": "day3_part1",
+                    "kind": "bin"
+                }
+            },
+            "args": [],
+            "cwd": "${workspaceFolder}"
+        },
+        {
+            "type": "lldb",
+            "request": "launch",
+            "name": "Debug unit tests in executable 'day3_part1'",
+            "cargo": {
+                "args": [
+                    "test",
+                    "--no-run",
+                    "--bin=day3_part1",
+                    "--package=day3_part1"
+                ],
+                "filter": {
+                    "name": "day3_part1",
+                    "kind": "bin"
+                }
+            },
+            "args": [],
+            "cwd": "${workspaceFolder}"
+        },
+        {
+            "type": "lldb",
+            "request": "launch",
+            "name": "Debug executable 'day3_part2'",
+            "cargo": {
+                "args": [
+                    "build",
+                    "--bin=day3_part2",
+                    "--package=day3_part2"
+                ],
+                "filter": {
+                    "name": "day3_part2",
+                    "kind": "bin"
+                }
+            },
+            "args": [],
+            "cwd": "${workspaceFolder}"
+        },
+        {
+            "type": "lldb",
+            "request": "launch",
+            "name": "Debug unit tests in executable 'day3_part2'",
+            "cargo": {
+                "args": [
+                    "test",
+                    "--no-run",
+                    "--bin=day3_part2",
+                    "--package=day3_part2"
+                ],
+                "filter": {
+                    "name": "day3_part2",
+                    "kind": "bin"
+                }
+            },
+            "args": [],
+            "cwd": "${workspaceFolder}"
+        },
+        {
+            "type": "lldb",
+            "request": "launch",
+            "name": "Debug executable 'day4_part1'",
+            "cargo": {
+                "args": [
+                    "build",
+                    "--bin=day4_part1",
+                    "--package=day4_part1"
+                ],
+                "filter": {
+                    "name": "day4_part1",
+                    "kind": "bin"
+                }
+            },
+            "args": [],
+            "cwd": "${workspaceFolder}"
+        },
+        {
+            "type": "lldb",
+            "request": "launch",
+            "name": "Debug unit tests in executable 'day4_part1'",
+            "cargo": {
+                "args": [
+                    "test",
+                    "--no-run",
+                    "--bin=day4_part1",
+                    "--package=day4_part1"
+                ],
+                "filter": {
+                    "name": "day4_part1",
+                    "kind": "bin"
+                }
+            },
+            "args": [],
+            "cwd": "${workspaceFolder}"
+        },
+        {
+            "type": "lldb",
+            "request": "launch",
+            "name": "Debug executable 'day4_part2'",
+            "cargo": {
+                "args": [
+                    "build",
+                    "--bin=day4_part2",
+                    "--package=day4_part2"
+                ],
+                "filter": {
+                    "name": "day4_part2",
+                    "kind": "bin"
+                }
+            },
+            "args": [],
+            "cwd": "${workspaceFolder}"
+        },
+        {
+            "type": "lldb",
+            "request": "launch",
+            "name": "Debug unit tests in executable 'day4_part2'",
+            "cargo": {
+                "args": [
+                    "test",
+                    "--no-run",
+                    "--bin=day4_part2",
+                    "--package=day4_part2"
+                ],
+                "filter": {
+                    "name": "day4_part2",
+                    "kind": "bin"
+                }
+            },
+            "args": [],
+            "cwd": "${workspaceFolder}"
         }
-      },
-      "args": [],
-      "cwd": "${workspaceFolder}"
-    },
-    {
-      "type": "lldb",
-      "request": "launch",
-      "name": "Debug unit tests in executable 'day1_part1'",
-      "cargo": {
-        "args": [
-          "test",
-          "--no-run",
-          "--bin=day1_part1",
-          "--package=day1_part1"
-        ],
-        "filter": {
-          "name": "day1_part1",
-          "kind": "bin"
-        }
-      },
-      "args": [],
-      "cwd": "${workspaceFolder}"
-    },
-    {
-      "type": "lldb",
-      "request": "launch",
-      "name": "Debug executable 'day1_part2'",
-      "cargo": {
-        "args": ["build", "--bin=day1_part2", "--package=day1_part2"],
-        "filter": {
-          "name": "day1_part2",
-          "kind": "bin"
-        }
-      },
-      "args": [],
-      "cwd": "${workspaceFolder}"
-    },
-    {
-      "type": "lldb",
-      "request": "launch",
-      "name": "Debug unit tests in executable 'day1_part2'",
-      "cargo": {
-        "args": [
-          "test",
-          "--no-run",
-          "--bin=day1_part2",
-          "--package=day1_part2"
-        ],
-        "filter": {
-          "name": "day1_part2",
-          "kind": "bin"
-        }
-      },
-      "args": [],
-      "cwd": "${workspaceFolder}"
-    },
-    {
-      "type": "lldb",
-      "request": "launch",
-      "name": "Debug executable 'day2_part1'",
-      "cargo": {
-        "args": ["build", "--bin=day2_part1", "--package=day2_part1"],
-        "filter": {
-          "name": "day2_part1",
-          "kind": "bin"
-        }
-      },
-      "args": [],
-      "cwd": "${workspaceFolder}"
-    },
-    {
-      "type": "lldb",
-      "request": "launch",
-      "name": "Debug unit tests in executable 'day2_part1'",
-      "cargo": {
-        "args": [
-          "test",
-          "--no-run",
-          "--bin=day2_part1",
-          "--package=day2_part1"
-        ],
-        "filter": {
-          "name": "day2_part1",
-          "kind": "bin"
-        }
-      },
-      "args": [],
-      "cwd": "${workspaceFolder}"
-    },
-    {
-      "type": "lldb",
-      "request": "launch",
-      "name": "Debug executable 'day2_part2'",
-      "cargo": {
-        "args": ["build", "--bin=day2_part2", "--package=day2_part2"],
-        "filter": {
-          "name": "day2_part2",
-          "kind": "bin"
-        }
-      },
-      "args": [],
-      "cwd": "${workspaceFolder}"
-    },
-    {
-      "type": "lldb",
-      "request": "launch",
-      "name": "Debug unit tests in executable 'day2_part2'",
-      "cargo": {
-        "args": [
-          "test",
-          "--no-run",
-          "--bin=day2_part2",
-          "--package=day2_part2"
-        ],
-        "filter": {
-          "name": "day2_part2",
-          "kind": "bin"
-        }
-      },
-      "args": [],
-      "cwd": "${workspaceFolder}"
-    }
-  ]
+    ]
 }
